add_library(TinyGL2 api arrays clear clip error get glu image_util init light list matrix memory misc msghandling oscontext select specbuf texture vertex zbuffer zdither zline zmath ztriangle)

add_library(TinyGL2_shared SHARED api arrays clear clip error get glu image_util init light list matrix memory misc msghandling oscontext select specbuf texture vertex zbuffer zdither zline zmath ztriangle) 
